Added non-flash fall-back method for admin charts.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "oauth-php"]
 	path = oauth-php
 	url = git://github.com/sergeychernyshev/oauth-php.git
+[submodule "admin/swfobject"]
+	path = admin/swfobject
+	url = git://github.com/swfobject/swfobject.git
