--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "admin/swfobject"]
 	path = admin/swfobject
 	url = git://github.com/swfobject/swfobject.git
+[submodule "modules/facebook/php-sdk"]
+	path = modules/facebook/php-sdk
+	url = git://github.com/facebook/php-sdk.git
