--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "modules/facebook/php-sdk"]
 	path = modules/facebook/php-sdk
 	url = git://github.com/facebook/php-sdk.git
+[submodule "dbupgrade"]
+	path = dbupgrade
+	url = git://github.com/sergeychernyshev/DBUpgrade.git
