Transaction Logging view/controller, admin section, variuos other fixes, calendar as submodule, etc.

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "smarty"]
 	path = smarty
 	url = git://github.com/ericingram/smarty.git
+[submodule "calendarview"]
+	path = calendarview
+	url = https://github.com/jsmecham/calendarview.git
