Bundling phptidy tool to make sure we always conform to code style guidelines (http://startupapi.org/Startup_API/Coding_Style)

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "dbupgrade"]
 	path = dbupgrade
 	url = git://github.com/sergeychernyshev/DBUpgrade.git
+[submodule "phptidy"]
+	path = phptidy
+	url = git://github.com/sergeychernyshev/phptidy.git
