Added Twitter Bootstrap library to be used in Admin UI

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "phptidy"]
 	path = phptidy
 	url = git://github.com/sergeychernyshev/phptidy.git
+[submodule "bootstrap"]
+	path = bootstrap
+	url = git://github.com/twitter/bootstrap.git
