Added Bootstrap 3 and first templates

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "php-bootstrap"]
 	path = php-bootstrap
 	url = git://github.com/sergeychernyshev/php-bootstrap.git
+[submodule "bootswatch"]
+	path = bootswatch
+	url = git@github.com:thomaspark/bootswatch.git
