Fixed module layout. Added masonry and imagesloaded to dependancies upon install

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bootswatch"]
 	path = bootswatch
 	url = git@github.com:thomaspark/bootswatch.git
+[submodule "imagesloaded"]
+	path = imagesloaded
+	url = git@github.com:desandro/imagesloaded.git
