--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,9 @@
 [submodule "php-bootstrap"]
 	path = php-bootstrap
 	url = git://github.com/sergeychernyshev/php-bootstrap.git
+[submodule "bootswatch"]
+	path = bootswatch
+	url = git://github.com/thomaspark/bootswatch.git
+[submodule "imagesloaded"]
+	path = imagesloaded
+	url = git://github.com/desandro/imagesloaded.git
