Added Swagger spec generation and Swagger UI interface to display API instead of home-grown page

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "phptidy"]
 	path = phptidy
 	url = https://github.com/cmrcx/phptidy.git
+[submodule "swagger-ui"]
+	path = swagger-ui
+	url = https://github.com/swagger-api/swagger-ui.git
